bin/tests/errors/parser/parser_err_unexpected_and_or.swg
#global fileprivate

#assert(A and (B || C)) // swc-expected-error {{parser_err_unexpected_and_or}}
